# service-1/api/docs/swagger.json
@@ -558,8 +558,7 @@
                         "type": "string",
                         "description": "Car ID",
                         "name": "id",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -990,18 +989,6 @@
                         "type": "string",
                         "description": "Id",
                         "name": "id",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "PaymentDate",
-                        "name": "payment_date",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Status",
-                        "name": "status",
                         "in": "query"
                     }
                 ],
